# mini-crm

./: .gitignore  Makefile  README.md  alembic.ini  app.db  config.py  create_tables.py  pyproject.toml  requirements.txt
app/: __init__.py  forms.py  login.html  models.py  routes.py
app/static/: style.css
app/templates/: analytics.html  base.html  client_form.html  client_page.html  clients.html  deal.html  deal_form.html  deals.html  delete.html  index.html  login.html  register.html  user_page.html
app/tests/: conftests.py  test_analytics.py  test_auth.py  test_client.py  test_deal.py  test_forms.py  test_user.py
